--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="./styles/4-common.css" />
-    <link rel="stylesheet" href="./styles/6-filters.css" />
-    <link rel="stylesheet" href="./styles/3-header.css" />
-    <link rel="stylesheet" href="./styles/3-footer.css" />
-    <link rel="stylesheet" href="./styles/8-places.css" />
-    <link rel="icon" href="./images/icon.png" type="image/png" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="images/icon.png" />
+    <link rel="stylesheet" href="styles/4-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/100-places.css" />
+    <title>AirBnB clone</title>
   </head>
   <body>
-    <header><div class="logo"></div></header>
+    <header></header>
     <div class="container">
       <section class="filters">
-        <button type="button">Search</button>
         <div class="locations">
           <h3>States</h3>
-          <h4>california, Arizona...</h4>
+          <h4>California, Arizona...</h4>
           <ul class="popover">
-            <li><h2>Arizona:</h2></li>
             <li>
-              <ul class="popover_list">
+              <h2>Arizona:</h2>
+              <ul>
                 <li>Page</li>
                 <li>Page2</li>
               </ul>
             </li>
-            <li><h2>California:</h2></li>
             <li>
-              <ul class="popover_list">
+              <h2>California:</h2>
+              <ul>
                 <li>San Francisco</li>
                 <li>Los Altos</li>
               </ul>
@@ -39,208 +40,163 @@
           <h4>Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
-            <li>TV</li>
+            <li>Tv</li>
             <li>Kitchen</li>
             <li>Iron</li>
           </ul>
         </div>
+        <button type="button" name="button">Search</button>
       </section>
       <section class="places">
-        <div class="places_title">
-          <h1>Places</h1>
-        </div>
-        <div class="articles">
-          <article>
-            <div class="price_title">
-              <div class="article_title">
-                <h2>My Home</h2>
-              </div>
-              <div class="price_by_night">
-                <div class="price">$80</div>
-              </div>
-            </div>
-            <div class="information">
-              <div class="max_guest">
-                <div class="guest_icon"></div>
-                <div class="guest_number">
-                  <h2>2 Guests</h2>
-                </div>
-              </div>
-              <div class="number_rooms">
-                <div class="rooms_icon"></div>
-                <div class="rooms_number">
-                  <h2>1 Bedroom</h2>
-                </div>
-              </div>
-              <div class="number_bathrooms">
-                <div class="bathrooms_icon"></div>
-                <div class="bathrooms_number">
-                  <h2>1 Bathroom</h2>
-                </div>
-              </div>
-            </div>
-            <div class="user"><b>Owner:</b> John Lennon</div>
-            <div class="description">
-              This is a lovely 1 bedroom and 1 bathroom apartment than can
-              accomodate 2 people. It locates at center of Shangai and next to
-              subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops
-              to Jingan Temple.
-            </div>
-            <div class="amenities">
-              <h2>Amenities</h2>
-              <ul>
-                <li>
-                  <div class="places_amenities_pet_friendly"></div>
-                  Pet friendly
-                </li>
-                <li>
-                  <div class="places_amenities_tv"></div>
-                  Tv
-                </li>
-                <li>
-                  <div class="places_amenities_wifi"></div>
-                  Wifi
-                </li>
-              </ul>
-            </div>
-            <div class="reviews">
-              <h2>1 Review</h2>
-              <ul>
-                <li>
-                  <h3>From Bob Dylan the 27th January, 2017</h3>
-                  <p>Runshi is an epic host. Nothing more I can say. 5 star!</p>
-                </li>
-                <li>
-                  <h3>From Connor 4th August 2022</h3>
-                  <p>Highly recommended</p>
-                </li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <div class="price_title">
-              <div class="article_title">
-                <h2>Tiny House</h2>
-              </div>
-              <div class="price_by_night">
-                <div class="price">$65</div>
-              </div>
-            </div>
-            <div class="information">
-              <div class="max_guest">
-                <div class="guest_icon"></div>
-                <div class="guest_number">
-                  <h2>4 Guests</h2>
-                </div>
-              </div>
-              <div class="number_rooms">
-                <div class="rooms_icon"></div>
-                <div class="rooms_number">
-                  <h2>2 Bedrooms</h2>
-                </div>
-              </div>
-              <div class="number_bathrooms">
-                <div class="bathrooms_icon"></div>
-                <div class="bathrooms_number">
-                  <h2>1 Bathroom</h2>
-                </div>
-              </div>
-            </div>
-            <div class="user"><b>Owner:</b> Adrienne</div>
-            <div class="description">
-              Our place is a private, affordable stand-alone guest house
-              centrally located just minutes to French Quarters, downtown, The
-              Fair Groundz(Jazz Fest) and City Park. The guest house is a
-              quaint, 400 square ft. with a full bath, mini kitchen, & living
+        <h1>Places</h1>
+        <article>
+          <div class="article_places_header">
+            <h2>My home</h2>
+            <div class="price_by_night">$80</div>
+          </div>
+          <div class="information">
+            <div class="max_guest">2 Guests</div>
+            <div class="number_rooms">1 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user">
+            <p><b>Owner:</b> John Lennon</p>
+          </div>
+          <div class="description">
+            <p>
+              This is a lovely 1 bathroom apartament that can accommodate 2
+              people. It locates at the center of Shanghai and next to subway
+              line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to
+              Jungan Temle.
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+              <li>
+                <div class="places_amenities_tv"></div>
+                Tv
+              </li>
+              <li>
+                <div class="places_amenities_wifi"></div>
+                Wifi
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>2 Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Bob Dylan the 27th August 2022</h3>
+                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+              </li>
+              <li>
+                <h3>From Connor 4th August 2022</h3>
+                <p>Higly recommended!</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+
+        <article>
+          <h2>Tiny house</h2>
+          <div class="price_by_night">$65</div>
+          <div class="information">
+            <div class="max_guest">4 Guests</div>
+            <div class="number_rooms">2 Bedrooms</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user">
+            <p><b>Owner:</b> Addrienne</p>
+          </div>
+          <div class="description">
+            <p>
+              Our place is a privete, afffordable satan-alone guest house
+              centrally located just minutes to French Quarters, downtown th
+              Fair Grounds (Jazz Fest) and City Park. The guest house is a
+              quaint, 400 suare ft. with a full bath, mini kitchen, & livin
               room. The extra high cellings make the home feel more spacious.
-              The sofa converts to a bed also. We have a hand made counter area
+              The sofa converts to bed also. We have a hand made counter area
               that adds character to the room and a great porch/deck to relax on
               and have a glass of Merlot.
-            </div>
-            <div class="amenities">
-              <h2>Amenities</h2>
-              <ul>
-                <li>
-                  <div class="places_amenities_pet_friendly"></div>
-                  Pet friendly
-                </li>
-              </ul>
-            </div>
-            <div class="reviews">
-              <h2>1 Review</h2>
-              <ul>
-                <li>
-                  <h3>From Max the 15th August 2022</h3>
-                  <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
-                </li>
-                <li>
-                  <h3>From Connor 4th August 2022</h3>
-                  <p>Higly recommended!</p>
-                </li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <div class="price_title">
-              <div class="article_title">
-                <h2>A Suite</h2>
-              </div>
-              <div class="price_by_night">
-                <div class="price">$190</div>
-              </div>
-            </div>
-            <div class="information">
-              <div class="max_guest">
-                <div class="guest_icon"></div>
-                <div class="guest_number">
-                  <h2>6 Guests</h2>
-                </div>
-              </div>
-              <div class="number_rooms">
-                <div class="rooms_icon"></div>
-                <div class="rooms_number">
-                  <h2>8 Bedroom</h2>
-                </div>
-              </div>
-              <div class="number_bathrooms">
-                <div class="bathrooms_icon"></div>
-                <div class="bathrooms_number">
-                  <h2>2 Bathroom</h2>
-                </div>
-              </div>
-            </div>
-            <div class="user"><b>Owner:</b> Bill Zuckerberg</div>
-            <div class="description">
-              Newly renovated spacious 2 bedrooms 2 baths in cozy Gastown style
-              unit with the view of North Shore mountains. Woodward's landmark
-              building sitated at the historic heart of Vancouver
-            </div>
-            <div class="amenities">
-              <h2>Amenities</h2>
-              <ul>
-                <li>
-                  <div class="places_amenities_pet_friendly"></div>
-                  Pet friendly
-                </li>
-              </ul>
-            </div>
-            <div class="reviews">
-              <h2>1 Review</h2>
-              <ul>
-                <li>
-                  <h3>From Max the 15th August 2022</h3>
-                  <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
-                </li>
-                <li>
-                  <h3>From Connor 4th August 2022</h3>
-                  <p>Higly recommended!</p>
-                </li>
-              </ul>
-            </div>
-          </article>
-        </div>
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>1 Review</h2>
+            <ul>
+              <li>
+                <h3>From Max the 15th August 2022</h3>
+                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+              </li>
+              <li>
+                <h3>From Connor 4th August 2022</h3>
+                <p>Higly recommended!</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <h2>A suite</h2>
+          <div class="price_by_night">$190</div>
+          <div class="information">
+            <div class="max_guest">5 Guests</div>
+            <div class="number_rooms">3 Bedroom</div>
+            <div class="number_bathrooms">2 Bathroom</div>
+          </div>
+          <div class="user">
+            <p><b>Owner:</b> Mick Jagger</p>
+          </div>
+          <div class="description">
+            <p>
+              First loft built by Holbies. It contains a decked terrace,
+              jacuzzi, firepit, rabbits garden, two rooms, two balconies,
+              entrance gate, private garden, private parking, BBQ area, AC in
+              each bedroom, technological equipment, luxury beds, and mountain
+              views. Ideal for architecture lovers, romantic dates, or having a
+              good time. It is a unique space of his kind. Only pets that do not
+              harm rabbits are allowed.
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>1 Review</h2>
+            <ul>
+              <li>
+                <h3>From Max the 15th August 2022</h3>
+                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+              </li>
+              <li>
+                <h3>From Connor 4th August 2022</h3>
+                <p>Higly recommended!</p>
+              </li>
+            </ul>
+          </div>
+        </article>
       </section>
     </div>
-    <footer>Best School</footer>
+    <footer>
+      <p>Best School</p>
+    </footer>
   </body>
 </html>
